# python-lamp-web-app

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  azure.yaml  deploy-to-azure.sh  pyproject.toml  start.sh
.devcontainer/: .env.template  Dockerfile  README.md  devcontainer.json  docker-compose.yml  init-dev-db.sh
.github/: DEPLOYMENT_SETUP.md  dependabot.yml  setup-azure.sh
.github/workflows/: auto-approve-dependabot.yml  dependabot-risk-labels.yml  infra-deploy.yml  infra-destroy.yml  security-native.yml
infra/: README.md  bicepconfig.json  main.bicep  main.bicepparam
infra/modules/: acr-integration.bicep  acr.bicep  appservice.bicep  keyvault.bicep  monitoring.bicep  postgresql.bicep
infra/modules/compute/: appservice.bicep
infra/modules/container/: acr.bicep  webhook.bicep
infra/modules/database/: postgresql.bicep
infra/modules/monitor/: dashboard.bicep
infra/modules/security/: keyvault.bicep  managed-identity.bicep
sbom/: python-lamp-web-app-sbom-2025-10-26T16-30-29.json
src/: main.py  requirements.txt  routers.py
src/api/: __init__.py  routers.py
src/core/: __init__.py  server.py
src/database/: __init__.py  config.py  database.py  ha_repository.py  init_db.py  local_db.py  local_repository.py  models.py  repository.py
src/services/: __init__.py  cache.py  sync.py
src/static/: script.js  style.css  style_backup.css
src/templates/: index.html
