[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-lamp-web-app"
version = "0.1.0"
description = "An enhanced interactive lamp web application with 3D animations and effects"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Jared T"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.128.3",
    "uvicorn[standard]==0.40.0",
    "jinja2==3.1.6",
    "python-multipart==0.0.22",
    "pydantic==2.12.5",
    # Database dependencies
    "sqlalchemy==2.0.46",
    "psycopg2-binary==2.9.11",
    "alembic==1.18.3",
    # Azure SDK for Key Vault
    "azure-identity==1.25.1",
    "azure-keyvault-secrets==4.10.0",
    # Additional utilities
    "python-dotenv==1.2.1",
]

# Modern dependency group for dev
[project.dependency-groups.dev]
dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/jaredthivener/python-lamp-web-app"
Repository = "https://github.com/jaredthivener/python-lamp-web-app"
Issues = "https://github.com/jaredthivener/python-lamp-web-app/issues"

[project.scripts]
lamp-app = "src.main:main"

# Hatchling build configuration
[tool.hatch.build.targets.wheel]
packages = ["src"]

# Hatch environment for dev
[tool.hatch.envs.dev]
group = "dev"
inherit = ["default"]

[tool.black]
target-version = ['py312']
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
rules = [
    "auto",  # Auto-detect language and apply relevant rules
    "security",
    "python",
]
